--- a/css/styles.css
+++ b/css/styles.css
@@ -11,20 +11,43 @@ body{
     justify-content: center;
     align-items: center; */
     min-height: 100vh;
-    background: url('/img/img_large.jpg') no-repeat;
+    background: url('../img/img_large.jpg') no-repeat; 
     background-size: cover;
     background-position: center;
+    overflow-y: hidden;
 }
 
-header h1{
+header a{
     font-family: Georgia;
     color: #fff;
     font-weight: 1000;
+    cursor: pointer;
+    text-decoration: none;
+}
 
+#head img {
+    height: 40px;
+    margin-right: 10px;
+}
+
+#head {
+    transition: 0.3s ease-out;
+    align-items: center;
+    display: flex;
+}
+
+header {
+    background-color: rgba(255, 255, 255, 0);  
+    backdrop-filter: blur(5px);
+    position: relative;
+    width: 100%;
+    top: -10px;
+    box-shadow: 3px 0px 9px 3px black;
 }
 
 #head:hover{
-    color: rgb(204, 204, 204);
+    color: orange;
+    transform: scale(1.1);
 }
 
 button:not(.animated-button) {
@@ -152,11 +175,12 @@ button:not(.animated-button) a {
 
 /* Welcome Message Styles */
 #welcome-message {
-    background-color: #fff3e0; /* Light orange background for warmth */
-    color: #000000; /* Darker orange text for contrast */
+    background-color: #fff3e000; /* Light orange background for warmth */
+    color: white; /* Darker orange text for contrast */
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+    border: 2px solid rgba(255,255,255,.2);
+    backdrop-filter: blur(20px);
     text-align: center; /* Centered text */
     margin: 100px auto; /* Center the div */
     max-width: 600px; /* Max width for readability */
@@ -325,14 +349,17 @@ nav a{
 
 footer {
     color: #f2f2f2;
-    text-align: center;
+    
     padding: 20px;
-    position: relative;
-    left: 0;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 8%;
     font-family: Arial, sans-serif;
+    display: flex;
+    margin-top: auto;
+    align-items: end;
+    justify-content: center;
 }
 
 
@@ -344,7 +371,7 @@ footer {
     }
     header{
         padding: 10px 40px;
-        margin-top: 40px;
+        padding-top: 40px;
     }
 
     header h1{
