feat: adding some pages and optimized with mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,209 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins",sans-serif;
+    
 }
 
-body{
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-    min-height: 100vh;
+:root {
+    --highlight: #FCDC2A;
+    --background: #114232
+}
+
+.bg-img {
     background: url('../img/img_large.jpg') no-repeat; 
     background-size: cover;
     background-position: center;
-    overflow-y: hidden;
+}
+
+#welcome {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#welcome div {
+    color: white; /* Darker orange text for contrast */
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center; /* Centered text */
+    max-width: 900px;
+}
+
+#secure {
+    background-color: black;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: center;
+    background-image: url("../img/freepik__candid-image-photography-natural-textures-highly-r__65477.jpeg");
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 70%;
+    height: 100vh;
+    align-items: center;
+    position: relative;
+    z-index: 6;
+}
+
+
+
+
+
+.secure-bg {
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    padding: 20px;
+    width: 600px;
+    background-position: 50% 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    border: 2px solid rgba(255,255,255,.2);
+    border-radius: 10px;
+}
+
+.gap {
+    padding-bottom: 5px !important;
+    border-bottom: 2px solid rgba(255,255,255,.2);
+    padding: 0px 20px;
+}
+
+.secure-desc {
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.title {
+    color: greenyellow;
+    font-size: 36px;
+}
+
+.sub-title {
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+#news {
+    height: auto;
+    background-color: black;
+    color: #f2f2f2;
+    padding: 30px;
+}
+
+.new-detail {
+    padding-bottom: 10px;
+    max-width: 600px;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.content {
+    display: none; /* Semua konten disembunyikan secara default */
+  }
+  
+  .content.active {
+    display: block; /* Konten yang aktif ditampilkan */
+  }
+
+.medium {
+    font-size: 30px !important;
+}
+
+.list-new {
+    
+    padding: 10px 0px;
+}
+
+.list {
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.3s ease-out;
+}
+
+.border {
+    border-bottom: 1px solid #ffffff90;
+}
+
+.list:hover {
+    transform: translateX(10px);
+}
+
+.transition {
+    height: 40vh;
+    margin-top: -40vh;
+    background: linear-gradient(to top, black, #ffffff00);
+    position: relative;
+    z-index: 7;
+}
+
+.transition-bot {
+    height: 40vh;
+    margin-bottom: -40vh;
+    position: relative;
+    background: linear-gradient(to bottom, black, #ffffff00);
+    z-index: 7;
+}
+
+#bullet {
+    background-color: black;
+    padding: 20px;
+}
+
+#gap-1 {
+    display: flex;
+    width: 25%;
+    justify-content: end;
+    min-width: 600px;
+}
+
+#gap-2 {
+    display: flex;
+    width: 50%;
+    justify-content: end;
+    min-width: 600px;
+}
+
+#gap-3 {
+    display: flex;
+    width: 75%;
+    justify-content: end;
+    min-width: 600px;
+}
+
+#gap-4 {
+    display: flex;
+    width: 100%;
+    justify-content: end;
+    min-width: 600px;
+}
+
+.number {
+    padding-right: 25px;
+    margin-right: 25px;
+    padding-left: 10px;
+    border-right: 1px solid white;
+}
+
+.point {
+    color: white;
+    display: flex;
+    background-color: red;
+    width: 600px;
+    margin: 20px 0px;
+    padding: 20px;
+    border-radius: 40px;
+}
+
+.point h2 {
+    font-size: 30px;
 }
 
 header a{
@@ -39,10 +230,11 @@ header a{
 header {
     background-color: rgba(255, 255, 255, 0);  
     backdrop-filter: blur(5px);
-    position: relative;
+    position: fixed;
     width: 100%;
     top: -10px;
     box-shadow: 3px 0px 9px 3px black;
+    z-index: 9999;
 }
 
 #head:hover{
@@ -174,27 +366,7 @@ button:not(.animated-button) a {
   
 
 /* Welcome Message Styles */
-#welcome-message {
-    background-color: #fff3e000; /* Light orange background for warmth */
-    color: white; /* Darker orange text for contrast */
-    padding: 20px;
-    border-radius: 8px;
-    border: 2px solid rgba(255,255,255,.2);
-    backdrop-filter: blur(20px);
-    text-align: center; /* Centered text */
-    margin: 100px auto; /* Center the div */
-    max-width: 600px; /* Max width for readability */
-}
 
-#welcome-message h2 {
-    font-size: 2em; /* Larger font size for the heading */
-    margin-bottom: 10px; /* Spacing between heading and paragraph */
-}
-
-#welcome-message p {
-    font-size: 1em; /* Comfortable reading size for paragraph */
-    line-height: 1.6; /* Line height for better readability */
-}
 
 
 .container{
@@ -203,6 +375,7 @@ button:not(.animated-button) a {
     justify-content: center;
     align-items: center;
     padding: 50px;
+    height: 100vh;
 }
 
 .wrapper{
@@ -279,6 +452,8 @@ button:not(.animated-button) a {
     text-decoration: underline;
 }
 
+
+
 .wrapper .btn{
     width: 100%;
     height: 45px;
@@ -349,26 +524,53 @@ nav a{
 
 footer {
     color: #f2f2f2;
+    padding: 10px;
     
-    padding: 20px;
-    position: absolute;
-    bottom: 0;
+    background-color: black;
     width: 100%;
-    height: 8%;
+    height: 200px;
     font-family: Arial, sans-serif;
     display: flex;
     margin-top: auto;
-    align-items: end;
+    align-items: center;
     justify-content: center;
+    gap: 50px;
 }
 
+.footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer-nav a {
+    text-decoration: none;
+    color: grey;
+}
+
+.footer-nav a:hover {
+    color: white;
+}
+
+.footer-links a {
+    text-decoration: none;
+    color: grey;
+    margin: 0px 35px;
+}
+
+.footer-links a:hover {
+    color: white;
+}
 
 @media (max-width: 768px) {
 
     .container{
-        padding: 10px 10px;
-        margin-top: 35px;
+        padding: 190px 10px;
+        height: 100%;
     }
+
+
     header{
         padding: 10px 40px;
         padding-top: 40px;
@@ -378,14 +580,49 @@ footer {
         margin-bottom: 3.5vh;
     }
 
-    #welcome-message{
-        margin: 70px 20px;
-    }
-
-    footer{
-        margin-top: 9vh;
+    footer {
+        flex-direction: column;
     }
     
+    .point {
+        color: white;
+        display: flex;
+        background-color: red;
+        width: 300px;
+        
+        padding: 20px;
+        border-radius: 40px;
+    }
+
+    .point h2 {
+        font-size: 16px;
+    }
+    
+    #gap-4, #gap-2, #gap-3, #gap-1 {
+        display: flex;
+        width: auto;
+        justify-content: center;
+        min-width: 0px;
+    }
+    
+    #bullet {
+        background-color: black;
+        padding: 0px;
+    }
+
+    .footer-links a {
+        text-decoration: none;
+        color: grey;
+        margin: 0px 25px;
+    }
+
+    .title {
+        font-size: 20px;
+    }
+
+    .sub-title {
+        font-size: 16px;
+    }
 }
 
 /* For mobile phones */
